--- a/experience.html
+++ b/experience.html
@@ -94,7 +94,7 @@
 
     <!-- ===== FOOTER ===== -->
     <footer>
-        &copy; 2025 Amira Yasmin. All rights reserved.
+        &copy; 2025 Amira Yasmin Website. All rights reserved.
     </footer>
 
 </body>
