--- a/education.html
+++ b/education.html
@@ -35,7 +35,7 @@
     </div>
 
     <div class="experience-card">
-        <img src="images/SMK.jpg" alt="High School">
+        <img src="images/smk.jpg" alt="High School">
         <div class="experience-text">
             <h3>2018 - 2023: High School</h3>
             <p>Studied at <strong>SMK Taman Tasik, Taiping</strong>, joined co-curricular activities, competitions, and took SPM (Sijil Pelajaran Malaysia).</p>
